Added hackernews one

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "hubot":         ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "twit":          "1.1.6"
+    "twit":          "1.1.6",
+    "nodepie":       "0.5.0"
   },
 
   "engines": {
