--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "hubot":         ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "twit":          "1.1.6",
-    "nodepie":       "0.5.0"
+    "nodepie":       "0.5.0",
+    "instagram-node-lib": "*"
   },
 
   "engines": {
