add instagram script

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "twit":          "1.1.6",
     "nodepie":       "0.5.0",
-    "instagram-node-lib": "*"
+    "instagram-node-lib": "*",
+    "hubot-principle": "git://github.com/hubot-scripts/hubot-principles.git",
+    "hubot-instagram": "git://github.com/raysrashmi/hubot-instagram.git"
   },
 
   "engines": {
